--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       no focus
     </h1>
     <p class="header-text title-decor">
-      Что делать, когда не можешь делать ничего </br>
+      Что делать, когда не можешь делать ничего <br />
       Или почему нам так сложно сконцентрироваться, особенно когда очень надо
     </p>
     <div class="decor-sign" aria-hidden="true"></div>
