--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </ul>
       </nav>
       <h1 class="title header-title">no focus</h1>
-      <p class="header-text title-decor">
+      <div class="header-text title-decor"><p>
         Что делать, когда не можешь делать ничего <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </p>
+      </p></div>
       <div class="decor-sign" aria-hidden="true"></div>
     </header>
 
