--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
       </nav>
       <h1 class="title header-title">no focus</h1>
-      <div class="header-text title-decor"><p>
+      <div><p class="header-text title-decor">
         Что делать, когда не можешь делать ничего <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p></div>
